--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
         <title>Title</title>
     </head>
     <body>
-        <h1>Prueba</h1>
+        <h1>Laser Game</h1>
+        <br/>Profile picture
+        <br/>Username
+        <br/>Shoots: x    
     </body>
 </html>
