The project has now some super-cool kittens! :D

--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         <h1>Prueba</h1>
+        <img src="./img/kitty1.jpg" style="width:200px; vertical-align: top;">
+        <img src="./img/kitty2.jpg" style="width:200px; vertical-align: top;">
     </body>
 </html>
